--- a/device_diabetes.html
+++ b/device_diabetes.html
@@ -1326,7 +1326,7 @@
             console.log(' liff.init 開始');
             
             await liff.init({
-                liffId: '2007301708-7r2WyMpB'
+                liffId: '2008121065-Ap0BV1Dk'
             });
             console.log(' liff.init 成功');
 
