--- a/device_diabetes.html
+++ b/device_diabetes.html
@@ -778,7 +778,7 @@
         <button id="btn-cgm-analysis" class="nav-btn">個人CGM資料與分析</button>
         <button id="btn-ai-food" class="nav-btn">AI食物辨識</button>
         <button id="btn-food-diary" class="nav-btn">個人飲食日誌</button>
-        <button id="btn-feedback" class="nav-btn">意見回饋</button>
+        <!-- <button id="btn-feedback" class="nav-btn">意見回饋</button> -->
         
     </div>
 
