--- a/device_diabetes.html
+++ b/device_diabetes.html
@@ -2797,37 +2797,60 @@
         // 繪製趨勢圖
         renderWeightTrendChart(records);
         
-        let html = '<div style="max-height: 400px; overflow-y: auto;">';
-        records.forEach((record, index) => {
-            const bmiColor = getBMIColor(record.bmi);
+        // 依月份分組並以時間軸卡片風格呈現
+        const sorted = [...records].sort((a,b)=> new Date(b.record_date) - new Date(a.record_date));
+        const groups = {};
+        sorted.forEach(r => {
+            const d = new Date(r.record_date);
+            const key = `${d.getFullYear()}-${String(d.getMonth()+1).padStart(2,'0')}`;
+            if (!groups[key]) groups[key] = [];
+            groups[key].push(r);
+        });
+
+        const monthNames = ['一月','二月','三月','四月','五月','六月','七月','八月','九月','十月','十一月','十二月'];
+        const fmtHeader = (key) => { const [y,m]=key.split('-'); return `${y}年 ${monthNames[parseInt(m,10)-1]}`; };
+
+        let html = '<div style="max-height: 420px; overflow-y: auto; padding-right: 2px;">';
+        Object.keys(groups).sort((a,b)=> new Date(b+'-01') - new Date(a+'-01')).forEach(key => {
+            const arr = groups[key];
             html += `
-                <div style="margin-bottom: 15px; padding: 15px; background: white; border-radius: 8px; border-left: 4px solid ${bmiColor}; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
-                    <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 8px;">
-                        <div style="font-weight: bold; color: #333;">${record.record_date}</div>
-                        <div style="font-size: 0.9em; color: #666;">${record.created_at.split(' ')[1]}</div>
-                    </div>
-                    <div style="display: grid; grid-template-columns: 1fr 1fr 1fr; gap: 10px; margin-bottom: 8px;">
-                        <div style="text-align: center;">
-                            <div style="font-size: 1.2em; font-weight: bold; color: #007bff;">${record.height} cm</div>
-                            <div style="font-size: 0.8em; color: #666;">身高</div>
-                        </div>
-                        <div style="text-align: center;">
-                            <div style="font-size: 1.2em; font-weight: bold; color: #28a745;">${record.weight} kg</div>
-                            <div style="font-size: 0.8em; color: #666;">體重</div>
-                        </div>
-                        <div style="text-align: center;">
-                            <div style="font-size: 1.2em; font-weight: bold; color: ${bmiColor};">${record.bmi}</div>
-                            <div style="font-size: 0.8em; color: #666;">BMI</div>
-                        </div>
-                    </div>
-                    <div style="text-align: center; margin-bottom: 8px;">
-                        <span style="background: ${bmiColor}; color: white; padding: 4px 8px; border-radius: 12px; font-size: 0.8em; font-weight: bold;">
-                            ${record.bmi_category}
-                        </span>
-                    </div>
-                    ${record.notes ? `<div style="font-size: 0.9em; color: #666; font-style: italic;">備註: ${record.notes}</div>` : ''}
+                <div style="position: sticky; top: 0; z-index: 1; background: linear-gradient(90deg, #f8f9fa 0%, #ffffff 100%); border: 1px solid #e9ecef; border-left: 4px solid #0d6efd; padding: 8px 12px; margin: 10px 0; border-radius: 8px; display: flex; justify-content: space-between; align-items: center;">
+                    <div style="font-weight: 700; color: #0d6efd;">${fmtHeader(key)}</div>
+                    <div style="font-size: 12px; color: #6c757d;">${arr.length} 筆紀錄</div>
                 </div>
             `;
+
+            arr.forEach(record => {
+                const bmiColor = getBMIColor(record.bmi);
+                const timeStr = (record.created_at||'').split(' ')[1]||'';
+                html += `
+                    <div style="display: grid; grid-template-columns: 90px 1fr; gap: 12px; align-items: start; margin-bottom: 12px;">
+                        <div style="text-align: right; color: #6c757d; font-size: 12px; padding-top: 6px;">${record.record_date}<div style=\"font-size:11px;\">${timeStr}</div></div>
+                        <div style="position: relative;">
+                            <div style="position:absolute; left:-20px; top:14px; width:10px; height:10px; background:${bmiColor}; border-radius:50%; box-shadow:0 0 0 3px rgba(0,0,0,0.05);"></div>
+                            <div style="margin-left: 0; padding: 14px; background: white; border-radius: 10px; border-left: 4px solid ${bmiColor}; box-shadow: 0 2px 8px rgba(0,0,0,0.06);">
+                                <div style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 10px;">
+                                    <div style="text-align:center;">
+                                        <div style="font-size:1.1em; font-weight:700; color:#007bff;">${record.height} cm</div>
+                                        <div style="font-size:0.8em; color:#666;">身高</div>
+                                    </div>
+                                    <div style="text-align:center;">
+                                        <div style="font-size:1.1em; font-weight:700; color:#28a745;">${record.weight} kg</div>
+                                        <div style="font-size:0.8em; color:#666;">體重</div>
+                                    </div>
+                                    <div style="text-align:center;">
+                                        <div style="font-size:1.1em; font-weight:700; color:${bmiColor};">${record.bmi}</div>
+                                        <div style="font-size:0.8em; color:#666;">BMI</div>
+                                    </div>
+                                </div>
+                                <div style="text-align:center; margin-top:8px;">
+                                    <span style="background:${bmiColor}; color:white; padding:4px 8px; border-radius:12px; font-size:0.8em; font-weight:600;">${record.bmi_category}</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                `;
+            });
         });
         html += '</div>';
         recordsDiv.innerHTML = html;
