--- a/device_diabetes.html
+++ b/device_diabetes.html
@@ -2848,8 +2848,7 @@
                 <div style="display: grid; grid-template-columns: 120px 1fr; gap: 12px; align-items: start; margin-bottom: 12px;">
                         <div style="text-align: right; color: #6c757d; font-size: 12px; padding-top: 12px;">${record.record_date}<div style=\"font-size:11px;\">${timeStr}</div></div>
                         <div style="position: relative;">
-                            <div style="position:absolute; left:-8px; top:18px; width:8px; height:8px; background:${bmiColor}; border-radius:50%; box-shadow:0 0 0 3px rgba(0,0,0,0.05);"></div>
-                            <div style="margin-left: 6px; padding: 14px; background: white; border-radius: 10px; border-left: 4px solid ${bmiColor}; box-shadow: 0 2px 8px rgba(0,0,0,0.06);">
+                            <div style="padding: 14px; background: white; border-radius: 10px; border-left: 4px solid ${bmiColor}; box-shadow: 0 2px 8px rgba(0,0,0,0.06);">
                                 <div style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 10px;">
                                     <div style="text-align:center;">
                                         <div style="font-size:1.1em; font-weight:700; color:#007bff;">${record.height} cm</div>
