--- a/device_diabetes.html
+++ b/device_diabetes.html
@@ -2876,8 +2876,8 @@
                                 </div>
                                 <div style="display:flex; justify-content:center; align-items:center; gap:8px; margin-top:8px;">
                                     <span style="background:${bmiColor}; color:white; padding:4px 8px; border-radius:12px; font-size:0.8em; font-weight:600;">${record.bmi_category}</span>
-                                    <button onclick="deleteWeightRecord(${record.id})" style="margin-left:8px; background:#dc3545; color:white; border:none; padding:6px 10px; border-radius:6px; font-size:12px; cursor:pointer;">刪除</button>
                                 </div>
+                                <button onclick="deleteWeightRecord(${record.id})" style="position:absolute; right:10px; bottom:10px; background:#dc3545; color:white; border:none; padding:4px 8px; border-radius:5px; font-size:11px; cursor:pointer;">刪除</button>
                             </div>
                         </div>
                     </div>
